@@ -2,6 +2,9 @@
 
 export(cocktailApp)
 import(shiny)
+importFrom(Ternary,TernaryPlot)
+importFrom(Ternary,TernaryPoints)
+importFrom(Ternary,TernaryText)
 importFrom(dplyr,arrange)
 importFrom(dplyr,coalesce)
 importFrom(dplyr,distinct)
@@ -10,6 +13,7 @@ importFrom(dplyr,filter)
 importFrom(dplyr,first)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,one_of)
 importFrom(dplyr,rename)
 importFrom(dplyr,right_join)
 importFrom(dplyr,sample_n)
