@@ -28,7 +28,8 @@ Imports:
     tibble,
     ggplot2,
     magrittr,
-    ggtern,
+    Ternary,
+dnl ggtern,
     forcats,
 dnl readr,
 dnl    urltools,
