@@ -1,4 +1,7 @@
 
+2018-08-20 Steven E. Pav <shabbychef@gmail.com>
+* removing ggtern in favor of Ternary package.
+
 2018-07-15 Steven E. Pav <shabbychef@gmail.com>
 * adding Hobson's Choice button.
 
